--- a/admin/package.json
+++ b/admin/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "echarts": "^4.4.0",
     "element-ui": "^2.10.1",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
