--- a/vue-mobile/package.json
+++ b/vue-mobile/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "babel-plugin-import": "^1.12.2",
     "better-scroll": "^1.15.2",
     "core-js": "^2.6.5",
     "mint-ui": "^2.2.13",
+    "vant": "^2.2.10",
     "vue": "^2.6.10",
     "vue-awesome-swiper": "^3.1.3",
     "vue-router": "^3.0.3",
