--- a/admin/package.json
+++ b/admin/package.json
@@ -12,7 +12,13 @@
     "core-js": "^2.6.5",
     "echarts": "^4.4.0",
     "element-ui": "^2.10.1",
+    "ionicons": "^4.6.3",
+    "perfect-scrollbar": "^1.4.0",
+    "sass": "^1.23.7",
+    "sass-loader": "^8.0.0",
+    "screenfull": "^5.0.0",
     "vue": "^2.6.10",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-router": "^3.0.3",
     "vue2-editor": "^2.9.1",
     "vuex": "^3.0.1"
