--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^3.0.6",
+    "chalk": "^3.0.0",
     "cors": "^2.8.5",
     "express": "^5.0.0-alpha.7",
     "express-session": "^1.16.2",
